fixed error on z-index instead of 99% should be just 99

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ header {
     background-color: #ffffff;
     position: fixed;
     padding: 0 2rem;
-    z-index: 99%;
+    z-index: 99;
     width: 100%;
     box-shadow: 0 2px 2px #fafafa;
 }
